--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'com.android.application'
+    id 'androidx.navigation.safeargs'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -35,8 +37,12 @@ android {
 
 dependencies {
 
+    implementation 'androidx.room:room-runtime:2.4.2'
+    implementation 'androidx.preference:preference:1.1.1'
+    annotationProcessor 'androidx.room:room-compiler:2.4.2'
+
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    def nav_version = "2.3.5"
+    def nav_version = "2.4.2"
 
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
@@ -55,4 +61,15 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
+    implementation 'com.mikhaellopez:circularimageview:4.3.0'
+
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.firebase:firebase-auth:20.0.4'
+    implementation 'androidx.preference:preference:1.1.1'
+
+    implementation platform('com.google.firebase:firebase-bom:30.0.1')
+    implementation 'com.google.firebase:firebase-analytics'
+
+    //EventBus
+    implementation 'org.greenrobot:eventbus:3.2.0'
 }
